# azure-iot-esp

./: .gitmodules  README.md
.github/workflows/: upload_components.yml
azure-iot-kit-sensors/: CMakeLists.txt  README.md  idf_component.yml
azure-iot-middleware-freertos/: CMakeLists.txt  idf_component.yml
azure-sdk-for-c/: CMakeLists.txt  idf_component.yml
coreMQTT/: CMakeLists.txt  idf_component.yml
sample-azure-iot/: CMakeLists.txt  idf_component.yml
